language_tests/outputs/invalid/deref.out
error: cannot move out of borrowed content
 -> language_tests/source_files/invalid/deref.tr:12:4
	    *x
	    ^^
